HW0 release